--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,30 +3,15 @@ main:
       authors: <strong>Xinjie Yao</strong>, Yu Wang, Pengfei Zhu, Wanyu Lin, Jialu Li, Weihao Li, Qinghua Hu.
       conference_short: ICML
       conference: International Conference on Machine Learning, 2024
-      pdf: https://scholar.google.com/citations?user=tScuhLkAAAAJ&hl=zh-CN&oi=ao
-      code: https://scholar.google.com/citations?user=tScuhLkAAAAJ&hl=zh-CN&oi=ao
+      ## pdf: https://scholar.google.com/citations?user=tScuhLkAAAAJ&hl=zh-CN&oi=ao
+      ## code: https://scholar.google.com/citations?user=tScuhLkAAAAJ&hl=zh-CN&oi=ao
       image: ./assets/img/SL_ICML.png
 
     - title: "Integrated Heterogeneous Graph Attention Network for Incomplete Multi-Modal Clustering"
       authors: Yu Wang, <strong>Xinjie Yao</strong>, Pengfei Zhu*, Weihao Li, Meng Cao, and Qinghua Hu.
       conference_short: IJCV
       conference: International Journal of Computer Vision, 2024
-      pdf: https://link.springer.com/article/10.1007/s11263-024-02066-y
-      code: https://github.com/yxjdarren/IHGAT
+      ## pdf: https://link.springer.com/article/10.1007/s11263-024-02066-y
+      ## code: https://github.com/yxjdarren/IHGAT
       image: ./assets/img/IJCV_IHGAT.png
 
-    - title: "Multi-View Deep Subspace Clustering Networks"
-      authors: Pengfei Zhu, <strong>Xinjie Yao</strong>, Yu Wang*, Binyuan Hui, Dawei Du, and Qinghua Hu.
-      conference_short: TCYB
-      conference: IEEE Transactions on Cybernetics, 2024
-      pdf: https://ieeexplore.ieee.org/abstract/document/10478097
-      code: https://github.com/yxjdarren/MvDSCN
-      image: ./assets/img/TCYB_MvDSCN.png
-      
-    - title: "Latent Heterogeneous Graph Network for Incomplete Multi-View Learning"
-      authors: Pengfei Zhu, <strong>Xinjie Yao</strong>, Yu Wang*, Meng Cao, Binyuan Hui, Shuai Zhao, and Qinghua Hu.
-      conference_short: TMM
-      conference: IEEE Transactions on Multimedia, 2022
-      pdf: https://ieeexplore.ieee.org/document/9721669
-      code: https://github.com/yxjdarren/LHGN_TMM_2022
-      image: ./assets/img/LHGN_TMM.png
