--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,26 @@
 # Basic Information 
-title: Xinjie Yao
+title: Weihao Li
 position: Ph.D. candidate
 affiliation: Vision Group
-email: yaoxinjie@tju.edu.cn
+email: majormoku0510@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Collaborative Learning; Class-Incremental Learning; Multi-View Learning
-description: The site is the academic personal homepage of Xinjie Yao.
+keywords: Collaborative Learning; Class-Incremental Learning;
+description: The site is the academic personal homepage of Weihao Li.
 canonical: 
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/citations?user=tScuhLkAAAAJ&hl=zh-CN&oi=ao
+# google_scholar: https://scholar.google.com/citations?user=tScuhLkAAAAJ&hl=zh-CN&oi=ao
 # cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/yxjdarren
+github_link: https://github.com/major-moku
 # linkedin: https://www.linkedin.com/
 # twitter: https://twitter.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/yxj.jpg
+avatar: ./assets/img/lwj.jpg
 favicon: ./assets/img/VISDRONE-LOGO.png
 favicon_dark: ./assets/img/VISDRONE-LOGO.png
 
