--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ github_link: https://github.com/major-moku
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/lwj.jpg
+avatar: ./assets/img/lwh.jpg
 favicon: ./assets/img/VISDRONE-LOGO.png
 favicon_dark: ./assets/img/VISDRONE-LOGO.png
 
