--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 main:
     - title: "Socialized Learning: Making Each Other Better Through Multi-Agent Collaboration"
-      authors: <strong>Xinjie Yao</strong>, Yu Wang, Pengfei Zhu, Wanyu Lin, Jialu Li, Weihao Li, Qinghua Hu.
+      authors: Xinjie Yao, Yu Wang, Pengfei Zhu, Wanyu Lin, Jialu Li, <strong>Weihao Li</strong>, Qinghua Hu.
       conference_short: ICML
       conference: International Conference on Machine Learning, 2024
       ## pdf: https://scholar.google.com/citations?user=tScuhLkAAAAJ&hl=zh-CN&oi=ao
@@ -8,7 +8,7 @@ main:
       image: ./assets/img/SL_ICML.png
 
     - title: "Integrated Heterogeneous Graph Attention Network for Incomplete Multi-Modal Clustering"
-      authors: Yu Wang, <strong>Xinjie Yao</strong>, Pengfei Zhu*, Weihao Li, Meng Cao, and Qinghua Hu.
+      authors: Yu Wang, Xinjie Yao, Pengfei Zhu*, <strong>Weihao Li</strong>, Meng Cao, and Qinghua Hu.
       conference_short: IJCV
       conference: International Journal of Computer Vision, 2024
       ## pdf: https://link.springer.com/article/10.1007/s11263-024-02066-y
